@@ -2,8 +2,9 @@
 
 	* src/av-cp/playlist-treeview.c:
 
-	Refactor: Put the code to unpopulate a container node, into a separate
-	function.
+	- Refactor: Put the code to unpopulate a container node, into a
+	  separate function.
+	- Remove a FIXME comment that is not valid anymore.
 
 2008-01-30  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
